Fix bugs 1) make navbar collapses in responsive version after clicking on a nav-ling, 2) correct emailsJS script link (missing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,6 @@ h2 {
 
 .nav-link:hover {
     font-weight : 800;
-    border-bottom: 1px solid darkslategray;
     color: darkslategray;
     border-radius: 10%;
 }
@@ -72,15 +71,15 @@ width: 100%;
 }
 
 #what {
-    padding-top:60px;
+    padding-top:70px;
 }
 
 #testimonies {
-    padding-top:60px;
+    padding-top:50px;
 }
 
 #contact {
-    padding-top:110px;
+    padding-top:100px;
 }
 
 
